<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".activities.LoginActivity"
    style="@style/Theme.AppCompat.NoActionBar"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:background="#dfd">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/grape"
            android:layout_marginBottom="5dp" />

        <EditText
            android:id="@+id/user"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:drawableLeft="@drawable/ic_username"
            android:hint="@string/username"
            android:textColor="#aaa"
            android:textColorHint="#ddd"
            android:textColorHighlight="#ddd"
            >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/pwd"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/ic_pwd"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#aaa"
            android:textColorHint="#ddd"
            android:textColorHighlight="#ddd">
        </EditText>

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:weightSum="1">


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:text="@string/log_in"/>

            <android.support.v7.widget.AppCompatButton
                android:drawableLeft="@drawable/icon_settings"
                android:id="@+id/btnSettings"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:text="@string/action_settings"/>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>