<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.MainActivity"
    android:background="@color/colorBackgroundDark">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />




    <LinearLayout
        android:id="@+id/main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:padding="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnPersonalManagement"
            android:text="@string/personal_management"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_button"
            android:textColor="@color/colorPrimaryText"
            />

        <Button
            android:id="@+id/btnWorkEnd"
            android:text="@string/work_end"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="25dp"
            android:textColor="@color/colorPrimaryText"
            />

        <Button
            android:id="@+id/btnPersonalInfo"
            android:text="@string/personal_info"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="25dp"
            android:textColor="@color/colorPrimaryText"
            />
<!--

        <Button
            android:id="@+id/btnEmployees"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/emploees"
            android:layout_marginTop="@dimen/button_main_activity_margin"
            android:layout_height="@dimen/button_main_activity_height"/>

        <Button
            android:id="@+id/btnWorks"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/works"
            android:layout_marginTop="@dimen/button_main_activity_margin"
            android:layout_height="@dimen/button_main_activity_height"/>

        <Button
            android:id="@+id/btnLogWorks"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/log_works"
            android:layout_marginTop="@dimen/button_main_activity_margin"
            android:layout_height="@dimen/button_main_activity_height"/>

 -->


    </LinearLayout>

    <!--<android.support.design.widget.FloatingActionButton
        android:id="@+id/btnCreateEmployee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:background="@color/colorBackgroundDark"
        android:src="@android:drawable/ic_menu_help"
        />-->
    <ImageButton
        android:id="@+id/btnCreateEmployee"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:background="@color/colorBackgroundDark"
        android:src="@drawable/ic_create_employee" />


</android.support.design.widget.CoordinatorLayout>
